<resources>
    <string name="app_name">ConstrainLayout</string>
    <string name="buenas_tardes">Buenas Tardes!</string>
    <string name="imageview_usando_cadenas">ImageView usando Cadenas</string>
    <string name="circle_layout">Circle Layout</string>
    <string name="cambiointerfaz">Siguiente</string>
    <string name="siguiente_2">Siguiente</string>
    <string name="anterior_3">Anterior</string>
    <string name="figura_10_restricci_n_de_alineaci_n_horizontal_con_desplazamiento">Figura 10, Restricción de alineación horizontal con desplazamiento</string>
    <string name="figura_9_restricci_n_de_alineaci_n_horizontal">Figura 9, Restricción de alineación horizontal</string>
    <string name="figura_7_restricci_n_horizontal">Figura 7, Restricción Horizontal</string>
    <string name="figura_8_posici_n_de_orden">Figura 8, Posición de Orden</string>
    <string name="anterior3_boton">Anterior</string>
    <string name="siguiente_3">Siguiente</string>
    <string name="anterior_4">Anterior</string>
    <string name="restricci_n_seg_n_una_gu_a">Restricción según una guía</string>
    <string name="comienza_la_barrier">Comienza la Barrier</string>
    <string name="estas_im_genes_est_n_debajo_de_la_barrera">Estas imágenes están debajo de la barrera</string>
</resources>